--- a/TensorFlow_Project.ipynb
+++ b/TensorFlow_Project.ipynb
@@ -195,7 +195,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#this is a test cell"
+    "#this is a test cell\n",
+    "#this is a check cell"
    ]
   }
  ],
