Update test code

--- a/TensorFlow_Project.ipynb
+++ b/TensorFlow_Project.ipynb
@@ -13,6 +13,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#git commands in Git Bash to push commits in GitHub\n",
+    "##cd Personal/Self_Study/Projects/MyProject\n",
+    "##git add TensorFlow_Project.ipynb\n",
+    "##git commit -m \"Update TensorFlow_Project.ipynb\"\n",
+    "##git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#example code to understand how tensorflow works\n",
     "#with made up xy data for regression model\n",
     "\n",
@@ -187,16 +200,6 @@
     "model.compile(optimizer='adam',loss='sparse_categorical_crossentropy',metrics=['accuracy'])\n",
     "\n",
     "model.fit(trainingImages, trainingLabels, epochs=10, callbacks=[callbacks]) # use callback as a parameter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#this is a test cell\n",
-    "#this is a check cell"
    ]
   }
  ],
